--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     </div>
     </div>
     <script src="./test.js"></script>
+     <!-- <script src="./test2.js"></script> -->
   </body>
 </html>
